package app.domain.model;

import java.util.List;

public class NHSReport {

    private List<Test> listTestWithResultCovidPositive;

    public NHSReport(List<Test> listTestWithResultCovidPositive){

        this.listTestWithResultCovidPositive = listTestWithResultCovidPositive;
    }


    /*
    public String calculateData(){
    }

     */




    /*
    public boolean validateNHSReport(){

    }

     */


}
