package app.domain.model;

public class SpecialistDoctor extends Employee {
    public SpecialistDoctor(String name, String role, String address, String email, int phoneNumber, int socCode, int doctorIndexNumber) {
        super();
    }
}
