

@startuml
hide methods
skinparam classAttributeIconSize 0
left to right direction

class Company
class Laboratory
class ChemicalLaboratory
class ClinicalAnalysisLaboratory
class LaboratoryCoordinator
class User
class Role
class Employee
class Administrator
class SpecialistDoctor
class ClinicalChemistryTechnologist
class MedicalLabTechnician
class Receptionist
class Client
class LabOrder
class Result
class DiagnosisReport
class NHSReport
class ParameterCategory
class Parameter
class TestType
class Test
class Notification
class NHS
class Sample

Company "1" -- "*" Parameter : > capable of analysing

Company "1" -- "*" Employee : < works for

Company "1" -- "*" ParameterCategory : > adopts

Company "1" -- "*" Administrator : > knows

User "1" -- "1" Role : > plays a

Employee "1" -- "1" User : > is a

Client "1" -- "1" User : > is a

Employee "*" <|-- "*" ClinicalChemistryTechnologist

Employee "1" <|-- "1..*" Administrator

Employee "*" <|-- "1..*" Receptionist

Employee "*" <|-- "*" MedicalLabTechnician

Employee "*" <|-- "1..*" LaboratoryCoordinator

ClinicalChemistryTechnologist "*" -- "1" ChemicalLaboratory : > works at

MedicalLabTechnician "1..*" -- "*" ClinicalAnalysisLaboratory : > works at

Receptionist "1..*" -- "*" ClinicalAnalysisLaboratory : > works at

LaboratoryCoordinator "1..*" -- "*" Laboratory: > works at a

ChemicalLaboratory "1" -- "1" Company : < owns

ChemicalLaboratory "1" -- "*" Sample : < is sent to

ClinicalAnalysisLaboratory "*" -- "1" Company : < owns

Laboratory "1"  <|-- "1" ChemicalLaboratory

Laboratory "1"  <|-- "1" ClinicalAnalysisLaboratory

Administrator "*" -- "*" ParameterCategory : < created by

SpecialistDoctor "1" -- "1" Result : < analyzed by

Employee "*" <|-- "1..*" SpecialistDoctor

ClinicalChemistryTechnologist "*" -- "1..*" Sample : < analyzed by

Client "1" -- "*" Test : < requested by

Client "*" -- "1..*" Receptionist : < registers

LabOrder "1" -- "*" Client : > brought by

LabOrder "1" -- "1..*" Receptionist : < receives

LabOrder "1" -- "1" Test : < is associated

LabOrder "1" -- "1" TestType : > contains

Result "*" -- "1..*" ClinicalChemistryTechnologist : < registers

Result "*" -- "1..*" Notification : > is associated with

DiagnosisReport "1" -- "1" SpecialistDoctor : < registers

DiagnosisReport "1" -- "1" Client : > is sent to

DiagnosisReport "*" -- "1" LaboratoryCoordinator : < validates

NHSReport "1..*" -- "1" Result : < generates

NHSReport "1..*" -- "1" NHS : > is sent to

ParameterCategory "1" -- "*" Parameter : < presented under

Parameter "1..*" -- "*" Test : < requests analysis of

TestType "*" -- "1" ParameterCategory : > analyzes a

TestType "*" -- "1" Company : < conducts

TestType "1" -- "*" Test: < is of

TestType "*" -- "1" Administrator : < creates

Test "1" -- "1" Result : > has a

Test "*" -- "1" Company : < performs

Test "*" -- "*" ClinicalAnalysisLaboratory : < performs

Test "*" -- "1..*" Receptionist : < registers

Test "1" -- "1" DiagnosisReport : < associated with

Sample "*" -- "1" Test : < collects

Sample "1..*" -- "1..*" MedicalLabTechnician : < registers

Notification "1..*" -- "*" Client : > informs

class Company{
-designation
}

class Laboratory{
-name
-address
-phoneNumber
-TIN
}

class ChemicalLaboratory{
}

class ClinicalAnalysisLaboratory{
-labID
}

class User{
-name
-email
-password
}

class Role{
-id
-description
}

class Administrator{
}

class Employee{
-name
-address
-phoneNumber
-employeeID
-orgRole
-email
-SOCcode
}

class SpecialistDoctor{
-doctorIndex
}

class ClinicalChemistryTechnologist{
}

class MedicalLabTechnician{
}

class Receptionist{
}

class Client{
-citizenID
-nhsID
-birthDate
-sex
-TIN
-phoneNumber
-email
-name
}

class LabOrder{
}

class Result{
}

class DiagnosisReport{
}

class ParameterCategory{
-code
-description
-nhsID
}

class Parameter{
-designation
-description
-code
}

class TestType{
-code
-description
-collectingMethod
}

class Test{
-description
-code
-nhsCode
-collectDateTime
-chemicalAnalysisDateTime
-diagnosisDateTime
-validationDateTime
}

class Sample{
-barcode
}

@enduml